--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&display=swap');
   --color-bg-light: #ffffff;
   --color-text-light: #333333;
   --color-accent: #FFD700; /* yellow */
